# fasttext-lid-server

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  publish.sh
